--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
     <body>
 <h1>Jackson Williams' CSCE 190 Site</h1>
 
-<p>I &hearts; drumming</p>
+    <section class="assignment">
+        <a href="files/CSCE190 problem statement.pdf"><img src="images/problem statement.png"></a>
+<section class="ass-details">
+    <a href="files/CSCE190 problem statement.pdf"><h2>Problem Statement: Calorie Tracker</h2></a>
+    <p>
+        Our users are not properly keeping track of how many calories they are taking in each day. Most users don’t have time to manually keep track of how much they are eating. Our solution will help users by tracking their caloric intake automatically.   
+     </p>
+</section>
+    </section>
     </body>
 </html>
