--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <h1>Jackson Williams' CSCE 190 Site</h1>
 
     <section class="assignment">
-        <a href="files/CSCE190 problem statement.pdf"><img src="images/problem statement.png"></a>
+        <a href="files/CSCE190 problem statement.pdf"><img src="images/problem statement.PNG"></a>
 <section class="ass-details">
     <a href="files/CSCE190 problem statement.pdf"><h2>Problem Statement: Calorie Tracker</h2></a>
     <p>
