--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <body>
 <h1>Jackson Williams' CSCE 190 Site</h1>
 
+<!--Problem Statment Assignment-->
     <section class="assignment">
         <a href="files/CSCE190 Problem Statement.pdf"><img src="images/problem statement.PNG"></a>
 <section class="ass-details">
@@ -15,5 +16,16 @@
      </p>
 </section>
     </section>
-    </body>
+
+    <!--Affinity Diagram Assignment-->
+    <section class="assignment">
+        <a href="files/affinity-diagram.pdf"><img src="images/affinity-diagram.PNG"></a>
+    </section class="ass-details">
+    <a href="files/affinity-diagram.pdf"><h2>Affinity Diagram: Calorie Tracker</h2></a>
+<p>
+    My group and I worked together to create ideas for our calorie tracker app.
+</p>
+</section>
+</section>
+</body>
 </html>
