--- a/index.html
+++ b/index.html
@@ -28,5 +28,16 @@
 </p>
 </section>
 </section>
+
+ <!--Personna Assignment-->
+ <section class="assignment">
+    <a href="files/personna.pdf.pdf"><img src="images/personna.png.PNG"></a>
+</section class="ass-details">
+<a href="files/personna.pdf.pdf"><h2>Personna: People who will use our app</h2></a>
+<p>
+Personnas for typical people who will use a calorie tracker app.
+</p>
+</section>
+</section>
 </body>
 </html>
