--- a/index.html
+++ b/index.html
@@ -1,43 +1,72 @@
 <!DOCTYPE html>
 <html>
+
     <head>
         <title>CSCE 190: Jackson Williams</title>
         <link rel="stylesheet" href="styles.css">
     </head>
-    <body>
-<h1>Jackson Williams' CSCE 190 Site</h1>
+    
+<body>
+    <h1>Jackson Williams' CSCE 190 Site</h1>
 
 <!--Problem Statment Assignment-->
     <section class="assignment">
-        <a href="files/CSCE190 Problem Statement.pdf"><img src="images/problem statement.PNG"></a>
-<section class="ass-details">
-    <a href="files/CSCE190 Problem Statement.pdf"><h2>Problem Statement: Calorie Tracker</h2></a>
-    <p>
+        <a href="files/CSCE190 Problem Statement.pdf">
+            <img src="images/problem statement.PNG">
+        </a>
+        <section class="ass-details">
+            <a href="files/CSCE190 Problem Statement.pdf">
+                <h2>Problem Statement: Calorie Tracker</h2>
+            </a>
+            <p>
         Our users are not properly keeping track of how many calories they are taking in each day. Most users don’t have time to manually keep track of how much they are eating. Our solution will help users by tracking their caloric intake automatically.   
-     </p>
+            </p>
 </section>
     </section>
 
     <!--Affinity Diagram Assignment-->
     <section class="assignment">
-        <a href="files/affinity-diagram.pdf"><img src="images/affinity-diagram.PNG"></a>
+        <a href="files/affinity-diagram.pdf">
+            <img src="images/affinity-diagram.PNG">
+        </a>
     </section class="ass-details">
-    <a href="files/affinity-diagram.pdf"><h2>Affinity Diagram: Calorie Tracker</h2></a>
-<p>
+            <a href="files/affinity-diagram.pdf">
+                <h2>Affinity Diagram: Calorie Tracker</h2>
+            </a>
+            <p>
     My group and I worked together to create ideas for our calorie tracker app.
-</p>
+            </p>
 </section>
-</section>
+    </section>
 
  <!--Personna Assignment-->
- <section class="assignment">
-    <a href="files/personna.pdf.pdf"><img src="images/personna.png.PNG"></a>
-</section class="ass-details">
-<a href="files/personna.pdf.pdf"><h2>Personna: People who will use our app</h2></a>
-<p>
+    <section class="assignment">
+        <a href="files/personna.pdf.pdf">
+            <img src="images/personna.png.PNG">
+        </a>
+    </section class="ass-details">
+            <a href="files/personna.pdf.pdf">
+                <h2>Personna: People who will use our app</h2>
+            </a>
+            <p>
 Personnas for typical people who will use a calorie tracker app.
-</p>
+            </p>
 </section>
+    </section>
+
+<!--Sketch Assignment-->
+    <section class="assignment">
+        <a href="files/Sketchingpdf">
+            <img src="images/sketches.PNG">
+        </a>
+    </section class="ass-details">
+            <a href="files/Sketching.pdf">
+                <h2>sketches</h2>
+            </a>
+            <p>
+These are ideas of wh at our app could possibly look like.
+            </p>
 </section>
+    </section>
 </body>
 </html>
