--- a/index.html
+++ b/index.html
@@ -9,64 +9,81 @@
 <body>
     <h1>Jackson Williams' CSCE 190 Site</h1>
 
-<!--Problem Statment Assignment-->
-    <section class="assignment">
-        <a href="files/CSCE190 Problem Statement.pdf">
-            <img src="images/problem statement.PNG">
-        </a>
-        <section class="ass-details">
+    <div class="assignments">
+    <!--Problem Statment Assignment-->
+        <section class="assignment">
             <a href="files/CSCE190 Problem Statement.pdf">
-                <h2>Problem Statement: Calorie Tracker</h2>
+                <img src="images/problem statement.PNG">
             </a>
-            <p>
-        Our users are not properly keeping track of how many calories they are taking in each day. Most users don’t have time to manually keep track of how much they are eating. Our solution will help users by tracking their caloric intake automatically.   
-            </p>
-</section>
+            <section class="ass-details">
+                <a href="files/CSCE190 Problem Statement.pdf">
+                    <h2>Problem Statement: Calorie Tracker</h2>
+                </a>
+                <p>
+            Our users are not properly keeping track of how many calories they are taking in each day. Most users don’t have time to manually keep track of how much they are eating. Our solution will help users by tracking their caloric intake automatically.   
+                </p>
     </section>
+        </section>
 
-    <!--Affinity Diagram Assignment-->
-    <section class="assignment">
-        <a href="files/affinity-diagram.pdf">
-            <img src="images/affinity-diagram.PNG">
-        </a>
-    </section class="ass-details">
+        <!--Affinity Diagram Assignment-->
+        <section class="assignment">
             <a href="files/affinity-diagram.pdf">
-                <h2>Affinity Diagram: Calorie Tracker</h2>
+                <img src="images/affinity-diagram.PNG">
             </a>
-            <p>
-    My group and I worked together to create ideas for our calorie tracker app.
-            </p>
-</section>
+            </section class="ass-details">
+                <a href="files/affinity-diagram.pdf">
+                    <h2>Affinity Diagram: Calorie Tracker</h2>
+                </a>
+                <p>
+        My group and I worked together to create ideas for our calorie tracker app.
+                </p>
     </section>
+        </section>
 
- <!--Personna Assignment-->
-    <section class="assignment">
-        <a href="files/personna.pdf.pdf">
-            <img src="images/personna.png.PNG">
-        </a>
-    </section class="ass-details">
+    <!--Personna Assignment-->
+        <section class="assignment">
             <a href="files/personna.pdf.pdf">
-                <h2>Personna: People who will use our app</h2>
+                <img src="images/personna.png.PNG">
             </a>
-            <p>
-Personnas for typical people who will use a calorie tracker app.
-            </p>
-</section>
+        </section class="ass-details">
+                <a href="files/personna.pdf.pdf">
+                    <h2>Personna: People who will use our app</h2>
+                </a>
+                <p>
+    Personnas for typical people who will use a calorie tracker app.
+                </p>
     </section>
+        </section>
 
-<!--Sketch Assignment-->
-    <section class="assignment">
-        <a href="files/Sketchingpdf">
-            <img src="images/sketches.PNG">
-        </a>
-    </section class="ass-details">
-            <a href="files/Sketching.pdf">
-                <h2>sketches</h2>
+    <!--Sketch Assignment-->
+        <section class="assignment">
+            <a href="files/Sketchingpdf">
+                <img src="images/sketches.PNG">
             </a>
-            <p>
-These are ideas of wh at our app could possibly look like.
-            </p>
-</section>
+        </section class="ass-details">
+                <a href="files/Sketching.pdf">
+                    <h2>sketches</h2>
+                </a>
+                <p>
+    These are ideas of what our app could possibly look like.
+                </p>
     </section>
+        </section>
+
+        <!--Paper prototype Assignment-->
+        <section class="assignment">
+            <a href="https://youtu.be/5C24LULAiKs">
+                <img src="images/Paper-Prototype.PNG">
+            </a>
+        </section class="ass-details">
+                <a href="https://youtu.be/5C24LULAiKs">
+                    <h2>Paper Protoype</h2>
+                </a>
+                <p>
+    A paper walkthrough of a specific scenario within the application. 
+                </p>
+    </section>
+        </section>
+    </div>
 </body>
 </html>
