--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <a href="files/affinity-diagram.pdf">
                 <img src="images/affinity-diagram.PNG">
             </a>
-            </section class="ass-details">
+            <section class="ass-details">
                 <a href="files/affinity-diagram.pdf">
                     <h2>Affinity Diagram: Calorie Tracker</h2>
                 </a>
@@ -45,7 +45,7 @@
             <a href="files/personna.pdf.pdf">
                 <img src="images/personna.png.PNG">
             </a>
-        </section class="ass-details">
+        <section class="ass-details">
                 <a href="files/personna.pdf.pdf">
                     <h2>Personna: People who will use our app</h2>
                 </a>
@@ -60,7 +60,7 @@
             <a href="files/Sketchingpdf">
                 <img src="images/sketches.PNG">
             </a>
-        </section class="ass-details">
+        <section class="ass-details">
                 <a href="files/Sketching.pdf">
                     <h2>sketches</h2>
                 </a>
@@ -75,7 +75,7 @@
             <a href="https://youtu.be/5C24LULAiKs">
                 <img src="images/Paper-Prototype.PNG">
             </a>
-        </section class="ass-details">
+        <section class="ass-details">
                 <a href="https://youtu.be/5C24LULAiKs">
                     <h2>Paper Protoype</h2>
                 </a>
