--- a/index.html
+++ b/index.html
@@ -84,6 +84,20 @@
                 </p>
     </section>
         </section>
+     <!--Hi-fi prototype Assignment-->
+     <section class="assignment">
+        <a href="files/high-fi-prototype/index.html">
+            <img src="images/High-fi-prototype.PNG">
+        </a>
+    <section class="ass-details">
+            <a href="files/high-fi-prototype/index.html">
+                <h2>High-fi Protoype of calorie tracker app</h2>
+            </a>
+            <p>
+Different scenarios and ways of using our app in a high-fi-prototype. 
+            </p>
+</section>
+ </section>
     </div>
 </body>
 </html>
