--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     </section>
         </section>
 
-        <!--Paper prototype Assignment-->
+ <!--Paper prototype Assignment-->
         <section class="assignment">
             <a href="https://youtu.be/5C24LULAiKs">
                 <img src="images/Paper-Prototype.PNG">
@@ -98,6 +98,21 @@ Different scenarios and ways of using our app in a high-fi-prototype.
             </p>
 </section>
  </section>
+
+ <!--final presentationAssignment-->
+ <section class="assignment">
+    <a href="https://www.youtube.com/watch?v=sBcmAyvy4Bk">
+        <img src="images/PRESENTATION.PNG">
+    </a>
+<section class="ass-details">
+        <a href="https://www.youtube.com/watch?v=sBcmAyvy4Bk">
+            <h2>Presentation of prototype</h2>
+        </a>
+        <p>
+A short presentation of our calorie tracker app and how it functions.  
+        </p>
+</section>
+</section>
     </div>
 </body>
 </html>
