--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div class="section__text">
             <p class="section__text__p1">Hello, I'm</p>
             <h1 class="title"> Jackson Williams</h1>
-            <p class="section__text__p2"> Frontend Developer</p>
+            <p class="section__text__p2"> Developer</p>
             <div class="btn-container">
                 <button 
                 class="btn btn-color-2" 
@@ -291,7 +291,7 @@
                     <button 
                     class="btn btn-color-2 project-btn" 
                     onclick="location.
-                    href='https://github.com/SCCapstone/PalmettoProgrammers'">
+                    href='https:https://github.com/Jackson-Williams-15/Basketball-Team-Roster/tree/main'">
                         Github
                     </button>
                     <button 
@@ -305,23 +305,23 @@
             <div class="details-container color-container">
                 <div class="article-container">
                     <img 
-                    src="./assets/Gaming project.png" 
-                    alt="Project 1"
+                    src="./assets/basketball-backboard-and-ball.png" 
+                    alt="Project 2"
                     class="project-img"
                     >
                 </div>
-                <h2 class="experience-sub-title project-title">Group Gaming Webapp</h2>
+                <h2 class="experience-sub-title project-title">Basketball Team Roster</h2>
                 <div class="btn-container">
                     <button 
                     class="btn btn-color-2 project-btn" 
                     onclick="location.
-                    href='https://github.com/SCCapstone/PalmettoProgrammers'">
+                    href='https://github.com/Jackson-Williams-15/Basketball-Team-Roster'">
                         Github
                     </button>
                     <button 
                     class="btn btn-color-2 project-btn" 
                     onclick="location.
-                    href='https://www.youtube.com/watch?v=jp-dW9j6vXE'">
+                    //href='https://www.youtube.com/watch?v=jp-dW9j6vXE'">
                         Demo
                     </button>
                 </div>
