--- a/index.html
+++ b/index.html
@@ -178,17 +178,6 @@
                             <p>Intermediate</p>
                         </div>
                     </article>
-                    <article>
-                        <img 
-                        src="./assets/checkmark.png" 
-                        alt="Experience icon"
-                        class="icon"
-                        >
-                        <div>
-                            <h3>TypeScript</h3>
-                            <p>Basic</p>
-                        </div>
-                    </article>
                 </div>
                 </div>
                 <div class="details-container">
@@ -291,7 +280,7 @@
                     <button 
                     class="btn btn-color-2 project-btn" 
                     onclick="location.
-                    href='https:https://github.com/Jackson-Williams-15/Basketball-Team-Roster/tree/main'">
+                    href='https:https://github.com/Jackson-Williams-15/Basketball-Team-Roster'">
                         Github
                     </button>
                     <button 
@@ -308,6 +297,7 @@
                     src="./assets/basketball-backboard-and-ball.png" 
                     alt="Project 2"
                     class="project-img"
+                    style="width: 150px; height: auto;"
                     >
                 </div>
                 <h2 class="experience-sub-title project-title">Basketball Team Roster</h2>
