--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             <div class="about-containers">
                 <div class="details-container">
                     <h2 class="experience-sub-title">Frontend Developement</h2>
-                    <div class="article-container">
+                    <div class="article-container-experience">
                     <article>
                         <img 
                         src="./assets/checkmark.png" 
@@ -182,7 +182,7 @@
                 </div>
                 <div class="details-container">
                     <h2 class="experience-sub-title">Backend Developement</h2>
-                    <div class="article-container">
+                    <div class="article-container-experience">
                     <article>
                         <img 
                         src="./assets/checkmark.png" 
