--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                         class="icon"
                         >
                         <h3>Experience</h3>
-                        <p>2+ years <br />Frontend Developement</p>
+                        <p>3+ years <br />In Project Developement</p>
                 </div>
                 <div class="details-container">
                     <img 
@@ -101,12 +101,13 @@
                 </div>
             </div>
             <div class="text-container">
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
-                Facilis in vel, facere ratione perferendis dolor culpa. 
-                Libero obcaecati cumque distinctio quibusdam itaque. 
-                Itaque, temporibus sequi explicabo dolorum fuga nostrum architecto animi, 
-                suscipit quia distinctio ea assumenda. Laborum autem dicta optio eaque, 
-                voluptas hic similique nisi numquam nihil, illo quasi nesciunt?
+                <p>I am an aspiring software developer with a passion for building efficient and 
+                    innovative solutions. With a strong foundation in programming languages like 
+                    JavaScript, Java, and C#, I am constantly learning and expanding my skills to stay 
+                    updated with the latest technologies. My goal is to create user-friendly 
+                    applications that solve real-world problems and make a positive impact. 
+                    I am dedicated to continuous learning and thrive in collaborative environments where I 
+                    can contribute to meaningful projects.
                 </p>
             </div>
         </div>
