--- a/index.html
+++ b/index.html
@@ -271,25 +271,25 @@
             <div class="details-container color-container">
                 <div class="article-container">
                     <img 
-                    src="./assets/Gaming project.png" 
-                    alt="Project 1"
+                    src="./assets/Learn-Japanese-vector-design.jpg" 
+                    alt="Project 2"
                     class="project-img"
                     >
                 </div>
-                <h2 class="experience-sub-title project-title">Group Gaming Webapp</h2>
+                <h2 class="experience-sub-title project-title">Japanese Learning app</h2>
                 <div class="btn-container">
                     <button 
                     class="btn btn-color-2 project-btn" 
                     onclick="location.
-                    href='https:https://github.com/Jackson-Williams-15/Basketball-Team-Roster'">
+                    href='https://github.com/Jackson-Williams-15/JapeneseLearningApp'">
                         Github
                     </button>
-                    <button 
+                    <!--<button 
                     class="btn btn-color-2 project-btn" 
                     onclick="location.
                     href='https://www.youtube.com/watch?v=jp-dW9j6vXE'">
                         Demo
-                    </button>
+                    </button>-->
                 </div>
             </div>
             <div class="details-container color-container">
@@ -309,12 +309,12 @@
                     href='https://github.com/Jackson-Williams-15/Basketball-Team-Roster'">
                         Github
                     </button>
-                    <button 
+                    <!--<button 
                     class="btn btn-color-2 project-btn" 
                     onclick="location.
                     //href='https://www.youtube.com/watch?v=jp-dW9j6vXE'">
                         Demo
-                    </button>
+                    </button>-->
                 </div>
             </div>
         </div>
