--- a/index.html
+++ b/index.html
@@ -257,14 +257,14 @@
                     <button 
                     class="btn btn-color-2 project-btn" 
                     onclick="location.
-                    href='https://github.com/SCCapstone/PalmettoProgrammers'">
+                    href='https://github.com/Jackson-Williams-15/ForcesUnite'">
                         Github
                     </button>
                     <button 
                     class="btn btn-color-2 project-btn" 
                     onclick="location.
-                    href='https://www.youtube.com/watch?v=jp-dW9j6vXE'">
-                        Demo
+                    href='https://lemon-mushroom-0644c810f.4.azurestaticapps.net/'">
+                        Live Site
                     </button>
                 </div>
             </div>
