--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <div class="btn-container">
                 <button 
                 class="btn btn-color-2" 
-                onclick="window.open('./assets/Resume_Jackson_Williams.pdf')"
+                onclick="window.open('./assets/Resume_Jackson.pdf')"
                 >
                 Download Resume
             </button>
@@ -154,7 +154,7 @@
                         >
                         <div>
                             <h3>JavaScript</h3>
-                            <p>Intermediate</p>
+                            <p>Experienced</p>
                         </div>
                     </article>
                     <article>
@@ -176,7 +176,18 @@
                         >
                         <div>
                             <h3>REACT</h3>
-                            <p>Intermediate</p>
+                            <p>Experienced</p>
+                        </div>
+                    </article>
+                    <article>
+                        <img 
+                        src="./assets/checkmark.png" 
+                        alt="Experience icon"
+                        class="icon"
+                        >
+                        <div>
+                            <h3>UX/UI Design</h3>
+                            <p>Experienced</p>
                         </div>
                     </article>
                 </div>
@@ -192,7 +203,29 @@
                         >
                         <div>
                             <h3>PostgreSQL</h3>
-                            <p>Basic</p>
+                            <p>Intermediate</p>
+                        </div>
+                    </article>
+                    <article>
+                        <img 
+                        src="./assets/checkmark.png" 
+                        alt="Experience icon"
+                        class="icon"
+                        >
+                        <div>
+                            <h3>.NET</h3>
+                            <p>Experienced</p>
+                        </div>
+                    </article>
+                    <article>
+                        <img 
+                        src="./assets/checkmark.png" 
+                        alt="Experience icon"
+                        class="icon"
+                        >
+                        <div>
+                            <h3>Azure Cloud</h3>
+                            <p>Intermediate</p>
                         </div>
                     </article>
                     <article>
@@ -214,7 +247,7 @@
                         >
                         <div>
                             <h3>Git</h3>
-                            <p>Intermediate</p>
+                            <p>Experienced</p>
                         </div>
                     </article>
                     <article>
@@ -225,7 +258,7 @@
                         >
                         <div>
                             <h3>MySQL</h3>
-                            <p>Intermediate</p>
+                            <p>Experienced</p>
                         </div>
                     </article>
                 </div>
@@ -252,7 +285,7 @@
                     class="project-img"
                     >
                 </div>
-                <h2 class="experience-sub-title project-title">Group Gaming Webapp</h2>
+                <h2 class="experience-sub-title project-title">Forces Unite</h2>
                 <div class="btn-container">
                     <button 
                     class="btn btn-color-2 project-btn" 
