--- a/index.html
+++ b/index.html
@@ -330,8 +330,7 @@
                     <img 
                     src="./assets/basketball-backboard-and-ball.png" 
                     alt="Project 2"
-                    class="project-img"
-                    style="width: 150px; height: auto;"
+                    class="project-basketball-img"
                     >
                 </div>
                 <h2 class="experience-sub-title project-title">Basketball Team Roster</h2>
